# Kursovaya_FINAL

./: CMakeLists.txt
src/: ConvertSketch.cpp  ConvertSketch.h  GetDegrees.cpp  Header.h  MapCollision.cpp  Menu.cpp  Menu.h  Player.cpp  Player.h  main.cpp
